add mapbox, remove folium

--- a/tests/voronoi.ipynb
+++ b/tests/voronoi.ipynb
@@ -22,24 +22,10 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "Collecting freud-analysis\n\u001b[?25l  Downloading https://files.pythonhosted.org/packages/e0/be/344e8a9eb07e5734d7f6f72c336c440df8ab139a91ca44898f9a50016a4f/freud_analysis-1.2.2-cp37-cp37m-macosx_10_12_x86_64.whl (2.2MB)\n\u001b[K     |████████████████████████████████| 2.2MB 793kB/s \n\u001b[?25hRequirement already satisfied: numpy>=1.10 in ./.venv/lib/python3.7/site-packages (from freud-analysis) (1.16.2)\nInstalling collected packages: freud-analysis\nSuccessfully installed freud-analysis-1.2.2\n\u001b[33mWARNING: You are using pip version 19.2.3, however version 19.3.1 is available.\nYou should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
-    }
-   ],
-   "source": [
-    "!pip install freud-analysis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import geopandas as gpd\n",
     "import numpy as np\n",
     "from scipy.spatial import Voronoi, voronoi_plot_2d\n",
     "import freud\n",
